RESOLVED FIXED102909
Position in QWebHitTestResult does not match documentation
https://bugs.webkit.org/show_bug.cgi?id=102909
Summary Position in QWebHitTestResult does not match documentation
Allan Sandfeld Jensen
Reported 2012-11-21 02:29:26 PST
The position in QWebHitTestResult is documented as 'the position where the hit-test occured', but the point from HitTestResult that we use to initialize this value with is the point in inner most hit frame, and not the original hit-test point.
Attachments
Patch (1.59 KB, patch)
2012-11-21 02:50 PST, Allan Sandfeld Jensen
no flags
Patch (2.60 KB, patch)
2012-11-21 09:08 PST, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-11-21 02:50:03 PST
Jocelyn Turcotte
Comment 2 2012-11-21 08:35:07 PST
Comment on attachment 175396 [details] Patch How does this work, if I do a QWebFrame::hitTestContent on a sub-frame, what position will QWebHitTestResult::pos return me?
Allan Sandfeld Jensen
Comment 3 2012-11-21 08:45:14 PST
(In reply to comment #2) > (From update of attachment 175396 [details]) > How does this work, if I do a QWebFrame::hitTestContent on a sub-frame, what position will QWebHitTestResult::pos return me? Hit-testing a sub-frame will automatically be escalated to hit test in the main-frame. So essentially you can't.
Allan Sandfeld Jensen
Comment 4 2012-11-21 09:08:08 PST
Created attachment 175456 [details] Patch Do not change behaviour, change documentation
WebKit Review Bot
Comment 5 2012-11-21 16:03:53 PST
Comment on attachment 175456 [details] Patch Clearing flags on attachment: 175456 Committed r135449: <http://trac.webkit.org/changeset/135449>
WebKit Review Bot
Comment 6 2012-11-21 16:03:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.