Position in QWebHitTestResult does not match documentation https://bugs.webkit.org/show_bug.cgi?id=102909

Reviewed by Simon Hausmann.

Correct documentation and simplify using the new innerNodeFrame method.

* Api/qwebframe.cpp:
(QWebHitTestResultPrivate::QWebHitTestResultPrivate):


Canonical link: https://commits.webkit.org/121110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135449 268f45cc-cd09-0410-ab3c-d52691b4dbfc